--- a/package.json
+++ b/package.json
@@ -21,341 +21,341 @@
   },
   "dependencies": {
     "abab": "^2.0.6",
+    "acorn": "^8.8.2",
+    "acorn-globals": "^6.0.0",
+    "acorn-walk": "^7.2.0",
     "agent-base": "^6.0.2",
+    "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
-    "acorn-globals": "^6.0.0",
-    "acorn": "^8.8.2",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
     "arr-diff": "^4.0.0",
     "arr-flatten": "^1.1.0",
-    "array-unique": "^0.3.2",
-    "anymatch": "^3.1.3",
     "arr-union": "^3.1.0",
+    "array-unique": "^0.3.2",
     "assign-symbols": "^1.0.0",
-    "ansi-escapes": "^4.3.2",
-    "acorn-walk": "^7.2.0",
-    "atob": "^2.1.2",
     "asynckit": "^0.4.0",
-    "argparse": "^1.0.10",
-    "babel-plugin-jest-hoist": "^26.6.2",
+    "atob": "^2.1.2",
     "babel-jest": "^26.6.3",
-    "babel-preset-current-node-syntax": "^1.0.1",
     "babel-plugin-istanbul": "^6.1.1",
-    "base": "^0.11.2",
+    "babel-plugin-jest-hoist": "^26.6.2",
+    "babel-preset-current-node-syntax": "^1.0.1",
     "babel-preset-jest": "^26.6.2",
     "balanced-match": "^1.0.2",
-    "browser-process-hrtime": "^1.0.0",
+    "base": "^0.11.2",
+    "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
+    "browser-process-hrtime": "^1.0.0",
     "browserslist": "^4.21.5",
+    "bser": "^2.1.1",
     "buffer-from": "^1.1.2",
     "cache-base": "^1.0.1",
     "callsites": "^3.1.0",
     "camelcase": "^5.3.1",
     "caniuse-lite": "^1.0.30001481",
-    "char-regex": "^1.0.2",
-    "brace-expansion": "^1.1.11",
-    "ci-info": "^2.0.0",
-    "class-utils": "^0.3.6",
     "capture-exit": "^2.0.0",
+    "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "ci-info": "^2.0.0",
+    "cjs-module-lexer": "^0.6.0",
+    "class-utils": "^0.3.6",
+    "cliui": "^6.0.0",
     "co": "^4.6.0",
     "collect-v8-coverage": "^1.0.1",
     "collection-visit": "^1.0.0",
     "color-convert": "^2.0.1",
-    "chalk": "^4.1.2",
-    "combined-stream": "^1.0.8",
     "color-name": "^1.1.4",
-    "concat-map": "^0.0.1",
+    "combined-stream": "^1.0.8",
     "component-emitter": "^1.3.0",
-    "copy-descriptor": "^0.1.1",
+    "concat-map": "^0.0.1",
     "convert-source-map": "^1.9.0",
-    "bser": "^2.1.1",
+    "copy-descriptor": "^0.1.1",
+    "cross-spawn": "^7.0.3",
     "cssom": "^0.4.4",
     "cssstyle": "^2.3.0",
     "data-urls": "^2.0.0",
-    "decamelize": "^1.2.0",
     "debug": "^4.3.4",
+    "decamelize": "^1.2.0",
     "decimal.js": "^10.4.3",
     "decode-uri-component": "^0.2.2",
-    "cjs-module-lexer": "^0.6.0",
+    "deep-is": "^0.1.4",
+    "deepmerge": "^4.3.1",
     "define-property": "^2.0.2",
-    "cliui": "^6.0.0",
     "delayed-stream": "^1.0.0",
-    "domexception": "^2.0.1",
+    "detect-newline": "^3.1.0",
     "diff-sequences": "^26.6.2",
+    "domexception": "^2.0.1",
     "electron-to-chromium": "^1.4.372",
     "emittery": "^0.7.2",
     "emoji-regex": "^8.0.0",
-    "deep-is": "^0.1.4",
-    "detect-newline": "^3.1.0",
-    "cross-spawn": "^7.0.3",
-    "escape-string-regexp": "^2.0.0",
-    "deepmerge": "^4.3.1",
     "end-of-stream": "^1.4.4",
-    "escalade": "^3.1.1",
     "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^2.0.0",
+    "escodegen": "^2.0.0",
     "esprima": "^4.0.1",
-    "expand-brackets": "^2.1.4",
+    "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
-    "expect": "^26.6.2",
     "exec-sh": "^0.3.6",
+    "execa": "^4.1.0",
+    "exit": "^0.1.2",
+    "expand-brackets": "^2.1.4",
+    "expect": "^26.6.2",
     "extend-shallow": "^3.0.2",
     "extglob": "^2.0.4",
     "fast-json-stable-stringify": "^2.1.0",
-    "escodegen": "^2.0.0",
-    "execa": "^4.1.0",
-    "estraverse": "^5.3.0",
+    "fast-levenshtein": "^2.0.6",
+    "fb-watchman": "^2.0.2",
     "fill-range": "^7.0.1",
-    "for-in": "^1.0.2",
     "find-up": "^4.1.0",
+    "for-in": "^1.0.2",
+    "form-data": "^3.0.1",
     "fragment-cache": "^0.2.1",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
-    "exit": "^0.1.2",
     "gensync": "^1.0.0-beta.2",
-    "fast-levenshtein": "^2.0.6",
-    "form-data": "^3.0.1",
-    "fb-watchman": "^2.0.2",
-    "get-value": "^2.0.6",
-    "graceful-fs": "^4.2.11",
-    "glob": "^7.2.3",
     "get-caller-file": "^2.0.5",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^5.2.0",
+    "get-value": "^2.0.6",
+    "glob": "^7.2.3",
     "globals": "^11.12.0",
+    "graceful-fs": "^4.2.11",
+    "growly": "^1.3.0",
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
-    "get-stream": "^5.2.0",
-    "get-package-type": "^0.1.0",
-    "has-values": "^1.0.0",
     "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hosted-git-info": "^2.8.9",
     "html-encoding-sniffer": "^2.0.1",
-    "growly": "^1.3.0",
+    "html-escaper": "^2.0.2",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.1",
-    "imurmurhash": "^0.1.4",
-    "hosted-git-info": "^2.8.9",
-    "import-local": "^3.1.0",
+    "human-signals": "^1.1.1",
     "iconv-lite": "^0.4.24",
+    "import-local": "^3.1.0",
+    "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
-    "is-buffer": "^1.1.6",
     "inherits": "^2.0.4",
     "is-accessor-descriptor": "^1.0.0",
+    "is-arrayish": "^0.2.1",
+    "is-buffer": "^1.1.6",
     "is-ci": "^2.0.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-descriptor": "^1.0.2",
     "is-core-module": "^2.12.0",
-    "is-generator-fn": "^2.1.0",
-    "human-signals": "^1.1.1",
     "is-data-descriptor": "^1.0.0",
+    "is-descriptor": "^1.0.2",
+    "is-docker": "^2.2.1",
+    "is-extendable": "^1.0.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
     "is-number": "^7.0.0",
-    "is-potential-custom-element-name": "^1.0.1",
     "is-plain-object": "^2.0.4",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-stream": "^2.0.1",
     "is-typedarray": "^1.0.0",
     "is-windows": "^1.0.2",
-    "html-escaper": "^2.0.2",
-    "isarray": "^1.0.0",
-    "is-stream": "^2.0.1",
     "is-wsl": "^2.2.0",
-    "is-arrayish": "^0.2.1",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
     "isobject": "^3.0.1",
     "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-instrument": "^4.0.3",
     "istanbul-lib-report": "^3.0.0",
-    "jest-cli": "^26.6.3",
+    "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.5",
     "jest-changed-files": "^26.6.2",
+    "jest-cli": "^26.6.3",
     "jest-config": "^26.6.3",
     "jest-diff": "^26.6.2",
-    "is-extendable": "^1.0.1",
     "jest-docblock": "^26.0.0",
     "jest-each": "^26.6.2",
     "jest-environment-jsdom": "^26.6.2",
-    "isexe": "^2.0.0",
+    "jest-environment-node": "^26.6.2",
     "jest-get-type": "^26.3.0",
     "jest-haste-map": "^26.6.2",
     "jest-jasmine2": "^26.6.3",
+    "jest-leak-detector": "^26.6.2",
     "jest-matcher-utils": "^26.6.2",
-    "jest-mock": "^26.6.2",
-    "istanbul-lib-source-maps": "^4.0.1",
     "jest-message-util": "^26.6.2",
+    "jest-mock": "^26.6.2",
+    "jest-pnp-resolver": "^1.2.3",
     "jest-regex-util": "^26.0.0",
-    "jest-environment-node": "^26.6.2",
     "jest-resolve": "^26.6.2",
+    "jest-resolve-dependencies": "^26.6.3",
     "jest-runner": "^26.6.3",
     "jest-runtime": "^26.6.3",
-    "jest-snapshot": "^26.6.2",
-    "istanbul-lib-instrument": "^4.0.3",
     "jest-serializer": "^26.6.2",
-    "jest-validate": "^26.6.2",
+    "jest-snapshot": "^26.6.2",
     "jest-util": "^26.6.2",
-    "js-tokens": "^4.0.0",
-    "jest-worker": "^26.6.2",
+    "jest-validate": "^26.6.2",
     "jest-watcher": "^26.6.2",
+    "jest-worker": "^26.6.2",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
     "jsdom": "^16.7.0",
     "jsesc": "^2.5.2",
-    "jest-pnp-resolver": "^1.2.3",
-    "jest-resolve-dependencies": "^26.6.3",
-    "kind-of": "^6.0.3",
-    "js-yaml": "^3.14.1",
     "json-parse-even-better-errors": "^2.3.1",
-    "kleur": "^3.0.3",
-    "locate-path": "^5.0.0",
-    "jest-leak-detector": "^26.6.2",
     "json5": "^2.2.3",
-    "lodash": "^4.17.21",
+    "kind-of": "^6.0.3",
+    "kleur": "^3.0.3",
     "leven": "^3.1.0",
-    "lru-cache": "^5.1.1",
     "levn": "^0.3.0",
-    "makeerror": "^1.0.12",
-    "map-visit": "^1.0.0",
-    "map-cache": "^0.2.2",
-    "mime-types": "^2.1.35",
-    "micromatch": "^4.0.5",
-    "merge-stream": "^2.0.0",
-    "mime-db": "^1.52.0",
     "lines-and-columns": "^1.2.4",
+    "locate-path": "^5.0.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^5.1.1",
     "make-dir": "^3.1.0",
-    "nanomatch": "^1.2.13",
-    "ms": "^2.1.2",
-    "minimatch": "^3.1.2",
-    "mixin-deep": "^1.3.2",
-    "natural-compare": "^1.4.0",
-    "minimist": "^1.2.8",
+    "makeerror": "^1.0.12",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.5",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
     "mimic-fn": "^2.1.0",
-    "is-docker": "^2.2.1",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "mixin-deep": "^1.3.2",
+    "ms": "^2.1.2",
+    "nanomatch": "^1.2.13",
+    "natural-compare": "^1.4.0",
     "nice-try": "^1.0.5",
+    "node-int64": "^0.4.0",
+    "node-notifier": "^8.0.2",
+    "node-releases": "^2.0.10",
+    "normalize-package-data": "^2.5.0",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
     "nwsapi": "^2.2.4",
     "object-copy": "^0.1.0",
-    "node-notifier": "^8.0.2",
     "object-visit": "^1.0.1",
     "object.pick": "^1.3.0",
-    "node-releases": "^2.0.10",
     "once": "^1.4.0",
-    "p-each-series": "^2.2.0",
-    "node-int64": "^0.4.0",
-    "npm-run-path": "^4.0.1",
-    "p-limit": "^2.3.0",
-    "p-try": "^2.2.0",
-    "p-locate": "^4.1.0",
-    "p-finally": "^1.0.0",
-    "parse5": "^6.0.1",
-    "optionator": "^0.8.3",
-    "pascalcase": "^0.1.1",
     "onetime": "^5.1.2",
-    "path-is-absolute": "^1.0.1",
-    "normalize-package-data": "^2.5.0",
+    "optionator": "^0.8.3",
+    "p-each-series": "^2.2.0",
+    "p-finally": "^1.0.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
     "parse-json": "^5.2.0",
-    "pkg-dir": "^4.2.0",
-    "picomatch": "^2.3.1",
-    "path-parse": "^1.0.7",
-    "posix-character-classes": "^0.1.1",
+    "parse5": "^6.0.1",
+    "pascalcase": "^0.1.1",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
     "picocolors": "^1.0.0",
-    "psl": "^1.9.0",
-    "prelude-ls": "^1.1.2",
+    "picomatch": "^2.3.1",
     "pirates": "^4.0.5",
+    "pkg-dir": "^4.2.0",
+    "posix-character-classes": "^0.1.1",
+    "prelude-ls": "^1.1.2",
+    "pretty-format": "^26.6.2",
     "prompts": "^2.4.2",
+    "psl": "^1.9.0",
+    "pump": "^3.0.0",
     "punycode": "^2.3.0",
+    "querystringify": "^2.2.0",
+    "react-is": "^17.0.2",
+    "read-pkg": "^5.2.0",
+    "read-pkg-up": "^7.0.1",
     "regex-not": "^1.0.2",
-    "normalize-path": "^3.0.0",
     "remove-trailing-separator": "^1.1.0",
     "repeat-element": "^1.1.4",
     "repeat-string": "^1.6.1",
     "require-directory": "^2.1.1",
-    "querystringify": "^2.2.0",
     "require-main-filename": "^2.0.0",
-    "pretty-format": "^26.6.2",
+    "requires-port": "^1.0.0",
     "resolve": "^1.22.2",
-    "pump": "^3.0.0",
-    "path-exists": "^4.0.0",
-    "react-is": "^17.0.2",
-    "read-pkg-up": "^7.0.1",
     "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "resolve-url": "^0.2.1",
     "ret": "^0.1.15",
-    "read-pkg": "^5.2.0",
+    "rimraf": "^3.0.2",
+    "rsvp": "^4.8.5",
     "safe-regex": "^1.1.0",
     "safer-buffer": "^2.1.2",
+    "sane": "^4.1.0",
+    "saxes": "^5.0.1",
     "semver": "^6.3.0",
-    "requires-port": "^1.0.0",
     "set-blocking": "^2.0.0",
     "set-value": "^2.0.1",
-    "saxes": "^5.0.1",
-    "rsvp": "^4.8.5",
-    "resolve-url": "^0.2.1",
     "shebang-command": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "signal-exit": "^3.0.7",
-    "snapdragon": "^0.8.2",
-    "sane": "^4.1.0",
-    "slash": "^3.0.0",
-    "source-map": "^0.6.1",
-    "snapdragon-util": "^3.0.1",
-    "source-map-resolve": "^0.5.3",
-    "snapdragon-node": "^2.1.1",
-    "source-map-support": "^0.5.21",
-    "resolve-from": "^5.0.0",
-    "sisteransi": "^1.0.5",
-    "shellwords": "^0.1.1",
     "shebang-regex": "^3.0.0",
-    "spdx-expression-parse": "^3.0.1",
-    "split-string": "^3.1.0",
-    "spdx-exceptions": "^2.3.0",
-    "stack-utils": "^2.0.6",
-    "string-length": "^4.0.2",
-    "spdx-correct": "^3.2.0",
-    "strip-ansi": "^6.0.1",
+    "shellwords": "^0.1.1",
+    "signal-exit": "^3.0.7",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.6.1",
+    "source-map-resolve": "^0.5.3",
+    "source-map-support": "^0.5.21",
     "source-map-url": "^0.4.1",
-    "static-extend": "^0.1.2",
-    "string-width": "^4.2.3",
-    "sprintf-js": "^1.0.3",
+    "spdx-correct": "^3.2.0",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
     "spdx-license-ids": "^3.0.13",
-    "supports-color": "^7.2.0",
+    "split-string": "^3.1.0",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
+    "static-extend": "^0.1.2",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
     "strip-bom": "^4.0.0",
+    "strip-eof": "^1.0.0",
+    "strip-final-newline": "^2.0.0",
+    "supports-color": "^7.2.0",
     "supports-hyperlinks": "^2.3.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "symbol-tree": "^3.2.4",
     "terminal-link": "^2.1.1",
+    "test-exclude": "^6.0.0",
     "throat": "^5.0.0",
     "tmpl": "^1.0.5",
-    "symbol-tree": "^3.2.4",
     "to-fast-properties": "^2.0.0",
-    "strip-final-newline": "^2.0.0",
-    "to-regex": "^3.0.2",
     "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
     "to-regex-range": "^5.0.1",
-    "tr46": "^2.1.0",
     "tough-cookie": "^4.1.2",
-    "strip-eof": "^1.0.0",
+    "tr46": "^2.1.0",
+    "type-check": "^0.3.2",
     "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
     "typedarray-to-buffer": "^3.1.5",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "unset-value": "^1.0.0",
     "union-value": "^1.0.1",
+    "universalify": "^0.2.0",
+    "unset-value": "^1.0.0",
+    "update-browserslist-db": "^1.0.11",
     "urix": "^0.1.0",
     "url-parse": "^1.5.10",
     "use": "^3.1.1",
-    "type-fest": "^0.21.3",
-    "w3c-hr-time": "^1.0.2",
-    "update-browserslist-db": "^1.0.11",
-    "w3c-xmlserializer": "^2.0.0",
-    "webidl-conversions": "^6.1.0",
-    "walker": "^1.0.8",
-    "whatwg-mimetype": "^2.3.0",
-    "v8-to-istanbul": "^7.1.2",
-    "whatwg-url": "^8.7.0",
-    "which-module": "^2.0.1",
-    "test-exclude": "^6.0.0",
-    "validate-npm-package-license": "^3.0.4",
-    "type-check": "^0.3.2",
     "uuid": "^8.3.2",
+    "v8-to-istanbul": "^7.1.2",
+    "validate-npm-package-license": "^3.0.4",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^2.0.0",
+    "walker": "^1.0.8",
+    "webidl-conversions": "^6.1.0",
     "whatwg-encoding": "^1.0.5",
-    "wrappy": "^1.0.2",
-    "ws": "^7.5.9",
-    "write-file-atomic": "^3.0.3",
-    "xmlchars": "^2.2.0",
-    "yallist": "^3.1.1",
-    "xml-name-validator": "^3.0.0",
-    "y18n": "^4.0.3",
-    "yargs": "^15.4.1",
-    "universalify": "^0.2.0",
-    "yargs-parser": "^18.1.3",
+    "whatwg-mimetype": "^2.3.0",
+    "whatwg-url": "^8.7.0",
     "which": "^2.0.2",
+    "which-module": "^2.0.1",
+    "word-wrap": "^1.2.3",
     "wrap-ansi": "^6.2.0",
-    "word-wrap": "^1.2.3"
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "ws": "^7.5.9",
+    "xml-name-validator": "^3.0.0",
+    "xmlchars": "^2.2.0",
+    "y18n": "^4.0.3",
+    "yallist": "^3.1.1",
+    "yargs": "^15.4.1",
+    "yargs-parser": "^18.1.3"
   }
 }
